note on load path

--- a/README
+++ b/README
@@ -20,6 +20,9 @@ HOW IT WORKS
     ~/.gitdep/github.com/oleganza/gem_console/checkouts/f2c55bd10cd9cae14e5bf7bde523ac3a7b66561a
   
   3. Checks out f2c55bd10cd9cae14e5bf7bde523ac3a7b66561a commit inside that repo
+  
+  4. Addes the checked out path to $LOAD_PATH 
+     If ./lib subfolder exists, it is used instead (i.e. gem-like load path)
 
 TODO
 
