--- a/README
+++ b/README
@@ -30,8 +30,7 @@ TODO
      (e.g. on production server you don't have access to github.com, but you might 
       have a local mirror)
     
-  2. update bare repositories automatically when checkout failed
-  3. flatten a path to repo (for easier maintenance): github.com/oleganza/declarations -> github.com-oleganza-declarations
+  2. integration tests to cover all cases
   
 NOTES
 
