--- a/README
+++ b/README
@@ -3,8 +3,10 @@ autogit is an easy way to require specific versions of libraries, stored in git 
 EXAMPLE
 
   autogit 'git://github.com/oleganza/gem_console.git', 'f2c55bd10cd9cae14e5bf7bde523ac3a7b66561a'
+  require 'gem_console'
   autogit 'git://github.com/wycats/merb.git',          '1.0.7.1'
-  
+  require 'merb/lib/merb'
+
 HOW IT WORKS
 
   Suppose we have a following definition:
