docs, docs, docs. Now AutoGit could be used inside libraries

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ EXAMPLE
 
   You can also specify any valid git commitish in place of version (e.g. "f2c55bd10cd9ca")
   Branch names are valid too, but don't expect AutoGit to update your branch heads automatically.
-  After all, it is a bad practice to specify a branch head (i.e. unknown version) 
+  After all, it is a bad practice to specify a branch head (the version is unknown in this case) 
 
 HOW IT WORKS
 
@@ -58,10 +58,15 @@ HOW IT WORKS
     autogit(sources.map{|s| s + path }, commit)
   end
 
+HOW TO USE AUTOGIT IN A LIBRARY (GEM)
+
+  1. Put all specifications into if defined?(AutoGit)...end block.
+     This is crucial to let other use your library without AutoGit (e.g. as a rubygem)
+  2. Application may specify rewrite rules (AutoGit.rewrite) to modify 
+  
   
 TODO
 
-  - rewrite rules for sources (to manage libraries hints): AutoGit.rewrite(%r{github.com[:/]([^/]+)/([^/]+)}i){|url, login, repo| [url]  }
   - integration tests to cover all interesting cases
     
 NOTES
@@ -71,15 +76,6 @@ NOTES
   3. To fix or optimize your repositories, go to ~/.autogit folder and use standard git tools.
   4. --quiet flag is not used to inform user when initial cloning or checkout is performed. Second run will not emit any
      verbose output.
-  5. Currently, AutoGit is not that great to use in a library. 
-     Here's a good description why $LOAD_PATH management is not a concern of library:
-     http://gist.github.com/54177
-     
-     Current implemenation makes end-application to define all the sources for required libraries and their dependencies.
-     Imagine you require library "xyz" and you suddenly need to define sources for libraries "foo", "bar" and "buz" which you don't care about.
-     We can fix this by providing hints in libraries source code to be used by AutoGit when it is present.
-     This must be backwards-compatible with regular gems:     
-       autogit(url, version) if defined?(AutoGit)
   
 META
 
